--- a/.golangci.yml
+++ b/.golangci.yml
@@ -17,6 +17,9 @@ linters-settings:
   goconst:
     min-len: 2
     min-occurrences: 3
+  gosec:
+    excludes:
+      - G404
   gocritic:
     enabled-tags:
       - diagnostic
